--- a/src/components/card.module.css
+++ b/src/components/card.module.css
@@ -4,7 +4,7 @@ ul{
     margin: 0;
 }
 li{
-    padding: 12px 8px 12px 40px;
+    padding: 12px 8px 12px 52px;
     background: #fff;
     font-size: 24px;
     border-bottom: 1px solid #ededed;
@@ -46,4 +46,16 @@ input[type="checkbox"]:checked{
 input[type="checkbox"]:checked + label{
     color: #d9d9d9;
     text-decoration: line-through;
+}
+.deleteBtn{
+    position: relative;
+    background: none;
+    border: none;
+    font-size: 16px;
+    color: #cc9a9a;
+    z-index: 3;
+    transition: color 0.2s ease-out;
+}
+.deleteBtn:hover{
+    color: #af5b5e;
 }
